<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="fourthyninetons.multilanguage.RoleSelectorActiviry"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/tvIdentify"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="#000"
        android:text="@string/title_identify" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/cardLoadProvider"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/tvLoadProviderTitle"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:textSize="20sp"
                android:textColor="#000"
                android:gravity="center_vertical"
                android:text="@string/title_load_provider"
                android:background="@drawable/load_provider">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/load_provider_description"
                android:id="@+id/TVLoadProviderDesc"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#a4b2b2"
                android:textStyle="italic" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cardTransporter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="4dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:textSize="20sp"
                android:id="@+id/tvTransporterTitle"
                android:gravity="center_vertical"
                android:textColor="#000"
                android:text="@string/title_transporter"
                android:background="@drawable/transporters" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingLeft="5dp"
                android:textSize="16sp"
                android:textColor="#a4b2b2"
                android:textStyle="italic"
                android:text="@string/transporter_description"
                android:id="@+id/TVTransporterDesc"

                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/continueButton"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/continue_button_text" />
</LinearLayout>
